fix alignment

--- a/index.css
+++ b/index.css
@@ -229,6 +229,7 @@ footer {
 .waitlist__form input {
     flex-grow: 1;
     margin-right: 1em;
+    padding-left: 0;
 }
 
 .waitlist__form.waitlist__form--loading {
